Added "footer" and little correct for "Why me" section.

--- a/src/app/components/footer/footer.html
+++ b/src/app/components/footer/footer.html
@@ -1,8 +1,8 @@
-<div class="background footer-background-color">
-  <p>footer works!</p>
-  <div style="height: 150px; width: 100%;">
-    <p>
-      PLACEHOLDER
-    </p>
+<div class="background footer-class">
+  <div class="footer-class__author">
+    <p>Legal notice</p>
+    <p>© Artur Groblicki 2026</p>
   </div>
+  <app-my-logo class="footer-class__logo"/>
+  <app-social-media-buttons class="footer-class__social-btn"/>
 </div>
