--- a/src/styles.scss
+++ b/src/styles.scss
@@ -41,6 +41,18 @@ $white: white;
   height: 100%;
 }
 
+.footer{
+  background-color: $primary-color;
+  height: 214px;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-content: center;
+  align-items: center;
+  justify-content: center;
+}
+
 @media screen and (max-width:768px) {
 
 .sticky{
@@ -48,6 +60,11 @@ $white: white;
     top: 0px;
     z-index: 0;
     width: 100%;
+}
+
+.footer{
+  height: 243px;
+  flex-direction: column;
 }
 
 }
