--- a/src/app/components/why-me-section/why-me-section.html
+++ b/src/app/components/why-me-section/why-me-section.html
@@ -19,11 +19,11 @@
         </div>
       </div>
       <div class="why-me-section__inhalt__description">
-        <p>
+        <span>
           Coding is where my analytical thinking meets relentless persistence.
           <br>I treat every complex bug as a puzzle that requires a problem-solving mindset to solve.
           <br>I don’t just write code. I value collaboration to transform difficult challenges into clean, efficient, and scalable digital solutions.
-        </p>
+        </span>
       </div>
 
     </div>
