Added "Let's talk" button to "my skills" section.

--- a/src/app/components/my-skills-section/my-skills-section.html
+++ b/src/app/components/my-skills-section/my-skills-section.html
@@ -31,5 +31,6 @@
           </span>
         </div>
       </div>
+      <button (click)="scrollToSection('contact-me-section','contact-me-btn')">Let’s talk</button>
   </div>
 </div>
