--- a/src/app/app.html
+++ b/src/app/app.html
@@ -2,7 +2,7 @@
 <app-menu-bar class="sticky" /> <!-- menu bar -> header -->
 <app-why-me-section /> <!-- why me section -->
 <app-my-skills-section /> <!-- my skills section -->
-<app-my-project-section style="display: none;"/> <!-- my projects section -->
+<app-my-project-section /> <!-- my projects section -->
 <app-contact-me-section style="display: none;"/> <!-- contact me section -->
 <app-footer class="footer"/> <!-- footer section -->
 
