--- a/src/app/components/my-project-section/my-project-section.html
+++ b/src/app/components/my-project-section/my-project-section.html
@@ -1,5 +1,13 @@
 <div class="background">
   <div id="my-project-section" class="my-project-section scroll-section">
+    <h2>My Projects</h2>
+    <div>Projekts liste</div>
+    <div>Project detail
+      <div>ScreenShot</div>
+      <div>
 
+      </div>
+
+    </div>
   </div>
 </div>
