--- a/src/app/components/my-skills-section/my-skills-section.scss
+++ b/src/app/components/my-skills-section/my-skills-section.scss
@@ -9,7 +9,7 @@
   max-width: 1440px;
   margin-left: auto;
   margin-right: auto;
-  padding: 40px clamp(1.25rem, 8vw, 6.81rem) 80px;
+  padding: 40px clamp(1.25rem, 8vw, 6.81rem);
   h2{
     font-family: 'Anta';
     font-style: normal;
