--- a/src/app/components/my-project-section/my-project-section.scss
+++ b/src/app/components/my-project-section/my-project-section.scss
@@ -148,6 +148,7 @@
         align-content: center;
         justify-content: center;
         align-items: center;
+        padding-bottom: 16px;
         &__divIMG{
           width: 100%;
           display: flex;
