--- a/src/app/components/hero-section/hero-section.scss
+++ b/src/app/components/hero-section/hero-section.scss
@@ -103,6 +103,7 @@
       align-items: center;
       justify-content: center;
       bottom: 5%;
+      transition: background-color 0.3s ease;
     }
     &--arowwdown:hover{
       background-color: styles.$secondary-light-grey;
