--- a/src/app/components/why-me-section/why-me-section.scss
+++ b/src/app/components/why-me-section/why-me-section.scss
@@ -158,6 +158,7 @@ button{
   color: styles.$primary-color;
   position: relative;
   left: calc(50% - 136px / 2);
+  transition: background-color 0.3s ease;
   &:hover{
   background-color: styles.$secondary-light-grey;
   }
