--- a/src/app/app.html
+++ b/src/app/app.html
@@ -3,7 +3,7 @@
 <app-why-me-section /> <!-- why me section -->
 <app-my-skills-section /> <!-- my skills section -->
 <app-my-project-section /> <!-- my projects section -->
+<app-my-references />
 <app-contact-me-section/> <!-- contact me section -->
 <app-footer class="footer"/> <!-- footer section -->
-
 <router-outlet />
