--- a/src/app/components/contact-me-section/contact-me-section.scss
+++ b/src/app/components/contact-me-section/contact-me-section.scss
@@ -13,7 +13,7 @@
   max-width: 1440px;
   margin-left: auto;
   margin-right: auto;
-  padding: 0px 109px;
+  padding: 40px clamp(1.25rem, 8vw, 6.81rem);
   img{
     width: 100%;
   }
